# edgeguard-esp32-rtos-smart-room-node

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  platformio.ini  requirements.txt
.github/: README.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md  ci.md  demo_script.md  design_rationale.md  development.md  hardware.md  interview_notes.md  media_guide.md  state_machine.md  testing_plan.md  troubleshooting.md
firmware/EdgeGuard_ESP32/: EdgeGuard_ESP32.ino  app_state.cpp  app_state.h  config.h  control.cpp  control.h  edgeguard_control.cpp  edgeguard_control.h  edgeguard_event_log.cpp  edgeguard_event_log.h  edgeguard_types.h  sensors.cpp  sensors.h  tasks.cpp  tasks.h  types.h  web_routes.cpp  wifi_manager.cpp  wifi_manager.h
hardware/: wiring_table.md
scripts/: check_firmware_structure.py  run_host_tests.sh  validate_repo.py
test/native_stubs/: Arduino.h
test/native_stubs/freertos/: FreeRTOS.h
test/test_control_logic/: test_control_logic.cpp
tests/: README.md
tests/host_logic_tests/: CMakeLists.txt  README.md  test_control_logic.cpp  test_event_log.cpp
tools/: verify_repo.py
